@@ -889,6 +889,9 @@ void RB_CalcFogTexCoords( float *st ) {
 /*
 ** RB_CalcEnvironmentTexCoords
 */
+
+#ifndef SMOKINGUNS
+
 void RB_CalcEnvironmentTexCoords( float *st )
 {
 	int			i;
@@ -909,11 +912,54 @@ void RB_CalcEnvironmentTexCoords( float *st )
 		reflected[0] = normal[0]*2*d - viewer[0];
 		reflected[1] = normal[1]*2*d - viewer[1];
 		reflected[2] = normal[2]*2*d - viewer[2];
-
+		
 		st[0] = 0.5 + reflected[1] * 0.5;
 		st[1] = 0.5 - reflected[2] * 0.5;
 	}
 }
+
+#else
+
+void RB_CalcEnvironmentTexCoords( float *st , int axis )
+{
+	int			i;
+	float		*v, *normal;
+	vec3_t		viewer, reflected;
+	float		d;
+
+	v = tess.xyz[0];
+	normal = tess.normal[0];
+
+	for (i = 0 ; i < tess.numVertexes ; i++, v += 4, normal += 4, st += 2 )
+	{
+		VectorSubtract (backEnd.or.viewOrigin, v, viewer);
+		VectorNormalizeFast (viewer);
+
+		d = DotProduct (normal, viewer);
+
+		reflected[0] = normal[0]*2*d - viewer[0];
+		reflected[1] = normal[1]*2*d - viewer[1];
+		reflected[2] = normal[2]*2*d - viewer[2];
+		
+		// Joe Kari: allow custom projection axis for tcgen environment 
+		
+		if ( axis == 0 ) {
+			// For the X-axis, use this:
+			st[0] = 0.5 + reflected[1] * 0.5;
+			st[1] = 0.5 - reflected[2] * 0.5;
+		} else if ( axis == 1 ) {
+			// For the Y-axis, use this:
+			st[0] = 0.5 + reflected[0] * 0.5;
+			st[1] = 0.5 - reflected[2] * 0.5;
+		} else {
+			// For the Z-axis, use this:
+			st[0] = 0.5 + reflected[0] * 0.5;
+			st[1] = 0.5 - reflected[1] * 0.5;
+		}
+	}
+}
+
+#endif
 
 /*
 ** RB_CalcTurbulentTexCoords
